tests/ui/borrowck/uninitalized-in-match-arm-issue-126133.stderr
error[E0381]: used binding `bar` is possibly-uninitialized
  --> $DIR/uninitalized-in-match-arm-issue-126133.rs:19:16
   |
LL |     let bar;
   |         --- binding declared here but left uninitialized
...
LL |         E::B => {}
   |         ---- if this pattern is matched, `bar` is not initialized
...
LL |     let _baz = bar;
   |                ^^^ `bar` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
